2007-03-07  Joseph Myers  <joseph@codesourcery.com>

	* configure.in (REPORT_BUGS_TEXI): Define to Texinfo version of
	bug-reporting URL.
	* doc/Makefile.am (gasver.texi): Define BUGURL.
	* doc/as.texinfo: Use BUGURL.
	* Makefile.in, configure, doc/Makefile.in: Regenerate.

2007-03-06  Andreas Krebbel  <krebbel1@de.ibm.com>

	* config/tc-s390.c (md_parse_option): z9-ec option added.

2007-03-02  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (relax_immediate): Always return positive values.
	(relaxed_symbol_addr): New function.
	(relax_adr, relax_branch): Use it.
	(arm_relax_frag): Pass strect argument.  Adjust infinite loop check.

2007-03-01  Joseph Myers  <joseph@codesourcery.com>

	* as.c (parse_args): Update copyright date.

2007-02-28  Nathan Sidwell  <nathan@codesourcery.com>

	* configure.tgt (sh-*-uclinux, sh[12]-*-uclinux): Specify as elf.

2007-02-28  Nick Clifton  <nickc@redhat.com>

	PR gas/3797
	* config/tc-d10v.c (do_assemble): Do not generate error messages,
	just return -1 whenever a problem is encountered.
	(md_assemble): If do_assemble returns -1 generate a non-fatal
	error message and return.

	PR gas/2623
	* config/tc-msp430.c (line_separator_char): Change to '{'.

2007-02-27  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-m68hc11.c (fixup24): Correct fixup size.
	(build_jump_insn): Likewise.
	(build_insn): Likewise.
	(s_m68hc11_relax): Likewise.

2007-02-27  Alan Modra  <amodra@bigpond.net.au>

	* config/obj-elf.c (elf_frob_file): frag_wane any new frags.

2007-02-25  Mark Shinwell  <shinwell@codesourcery.com>

	* config/tc-arm.c (do_vfp_nsyn_pop): Use fldmias/fldmiad.

2007-02-23  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-mn10300.c (md_convert_frag): Correct fixup size.
	(md_assemble): Likewise.

2007-02-22  Alan Modra  <amodra@bigpond.net.au>

	* write.c (size_seg): Always clear SEC_RELOC here.
	(install_reloc): New function, extracted from..
	(write_relocs): ..here.  Combine RELOC_EXPANSION_POSSIBLE code