@@ -1,3 +1,9 @@
+2007-03-08  Alan Modra  <amodra@bigpond.net.au>
+
+	* Makefile.am: Run "make dep-am".
+	* Makefile.in: Regenerate.
+	* po/POTFILES.in: Regenerate.
+
 2007-03-07  Joseph Myers  <joseph@codesourcery.com>
 
 	* configure.in (REPORT_BUGS_TEXI): Define to Texinfo version of
